# api

./: .gitignore  meson.build  meson_options.txt
.github/actions/android-build/: action.yml
.github/workflows/: tizen.gbs.conf
c/: meson.build
c/include/: ml-api-common.h  ml-api-experimental.h  ml-api-service.h
c/src/: meson.build  ml-api-common.c  ml-api-inference-pipeline.c  ml-api-inference-single.c  ml-api-internal.h  ml-api-service-agent-client.c  ml-api-service-extension.c  ml-api-service-private.h  ml-api-service-query-client.c  ml-api-service.c
daemon/: main.c  meson.build  ml-agent-interface.c  ml-agent-plugin-parser.info  ml-agent.pc.in  plugin-parser.cc
daemon/include/: ml-agent-interface.h
java/: build-nnstreamer-android.sh
java/android/: build-nnstreamer-android-lib.sh
java/android/nnstreamer/: build.gradle
java/android/nnstreamer/src/androidTest/java/org/nnsuite/nnstreamer/: APITestCommon.java  APITestPipeline.java
java/android/nnstreamer/src/main/java/org/nnsuite/nnstreamer/: NNStreamer.java
java/android/nnstreamer/src/main/jni/: Android-flatbuf.mk  Android-gst-plugins.mk  Android-nnstreamer-prebuilt.mk  Android.mk
packaging/: machine-learning-api.spec
plugin-parser/: mlops-plugin-parser.cc  pkgmgr-info.h
tests/: meson.build
tests/capi/: meson.build  unittest_capi_datatype_consistency.cc  unittest_capi_inference_snpe.cc  unittest_capi_service_agent_client.cc  unittest_capi_service_extension.cc  unittest_capi_service_offloading.cc
tests/daemon/: unittest_gdbus_util.cc  unittest_mlops_agent.cc
tests/plugin-parser/: unittest_mlops_plugin_parser.cc
tests/plugin-parser/test_rpk_samples/working_rpk/: tizen-manifest.xml
tests/plugin-parser/test_rpk_samples/working_rpk/res/allowed/sample-res-type/: dummy-allowed.tflite  rpk_config.json
tests/services/: meson.build
tests/test_models/data/: orange_299.raw
